--- a/README.hbs
+++ b/README.hbs
@@ -1,7 +1,14 @@
 # Jungle
 A game for AI
 
+## TODO
+
+- Write simple client library
+- Disallow clients from setting other players' velocity
+- When I crash, my velocity goes to zero(?)
+- Player <-> player collisions
+
+
 ## Documentation
 {{>main}}
 
-## TODO
